New BD Рефакторинг

--- a/service/src/main/resources/templates/welcomeTemplate.html
+++ b/service/src/main/resources/templates/welcomeTemplate.html
@@ -740,7 +740,8 @@
                     <tbody>
                     <tr>
                         <td align="center" class="esd-stripe">
-                            <table align="center" bgcolor="#ffffff" cellpadding="0" cellspacing="0" class="es-content-body"
+                            <table align="center" bgcolor="#ffffff" cellpadding="0" cellspacing="0"
+                                   class="es-content-body"
                                    width="600">
                                 <tbody>
                                 <tr>
@@ -767,7 +768,8 @@
                                                         </tr>
                                                         <tr>
                                                             <td align="center"
-                                                                class="esd-block-spacer es-p20t es-p15b" style="font-size:0">
+                                                                class="esd-block-spacer es-p20t es-p15b"
+                                                                style="font-size:0">
                                                                 <table border="0" cellpadding="0" cellspacing="0"
                                                                        height="100%" width="100%">
                                                                     <tbody>
@@ -812,7 +814,8 @@
                                                                 <span class="es-button-border"
                                                                       style="background: #ed8e20 none repeat scroll 0% 0%;"><a
                                                                         class="es-button"
-                                                                        href="https://viewstripo.email" style="font-weight: normal; border-width: 15px 30px; background: #ed8e20 none repeat scroll 0% 0%; border-color: #ed8e20; color: #ffffff; font-size: 18px;"
+                                                                        href="https://viewstripo.email"
+                                                                        style="font-weight: normal; border-width: 15px 30px; background: #ed8e20 none repeat scroll 0% 0%; border-color: #ed8e20; color: #ffffff; font-size: 18px;"
                                                                         target="_blank">Confirm account</a></span>
                                                             </td>
                                                         </tr>
@@ -848,7 +851,8 @@
                                                             <td align="center" class="esd-block-image es-p15b"
                                                                 style="font-size:0"><a target="_blank"><img
                                                                     alt="Beretun logo"
-                                                                    src="https://tlr.stripocdn.email/content/guids/CABINET_75694a6fc3c4633b3ee8e3c750851c02/images/12331522050090454.png" style="display: block;"
+                                                                    src="https://tlr.stripocdn.email/content/guids/CABINET_75694a6fc3c4633b3ee8e3c750851c02/images/12331522050090454.png"
+                                                                    style="display: block;"
                                                                     title="Beretun logo" width="37"></a></td>
                                                         </tr>
                                                         <tr>
@@ -857,7 +861,8 @@
                                                         </tr>
                                                         <tr>
                                                             <td align="left"
-                                                                class="esd-block-text es-m-txt-c es-p5b" esdev-links-color="#777777">
+                                                                class="esd-block-text es-m-txt-c es-p5b"
+                                                                esdev-links-color="#777777">
                                                                 <p style="color: #777777;">Если у вас возникли сложности
                                                                     - держись, мы тебя действительно поддерживаем<br>
                                                                 </p>
@@ -881,7 +886,8 @@
                     <tbody>
                     <tr>
                         <td align="center" class="esd-stripe">
-                            <table align="center" bgcolor="#ffffff" cellpadding="0" cellspacing="0" class="es-content-body"
+                            <table align="center" bgcolor="#ffffff" cellpadding="0" cellspacing="0"
+                                   class="es-content-body"
                                    width="600">
                                 <tbody>
                                 <tr>
@@ -896,7 +902,8 @@
                                                             <td align="center" class="esd-block-image"
                                                                 style="font-size:0"><a target="_blank"><img
                                                                     alt
-                                                                    src="https://tlr.stripocdn.email/content/guids/CABINET_75694a6fc3c4633b3ee8e3c750851c02/images/18501522065897895.png" style="display: block;" width="46"></a></td>
+                                                                    src="https://tlr.stripocdn.email/content/guids/CABINET_75694a6fc3c4633b3ee8e3c750851c02/images/18501522065897895.png"
+                                                                    style="display: block;" width="46"></a></td>
                                                         </tr>
                                                         </tbody>
                                                     </table>
@@ -918,7 +925,8 @@
                         <td align="center" class="esd-stripe" esd-custom-block-id="7766">
                             <table align="center"
                                    bgcolor="#1b9ba3" cellpadding="0"
-                                   cellspacing="0" class="es-content-body" style="border-bottom:10px solid #48afb5;background-color: #1b9ba3;" width="600">
+                                   cellspacing="0" class="es-content-body"
+                                   style="border-bottom:10px solid #48afb5;background-color: #1b9ba3;" width="600">
                                 <tbody>
                                 <tr>
                                     <td align="left" class="esd-structure">
@@ -936,39 +944,47 @@
                                                                     <tr class="links-images-top">
                                                                         <td align="center"
                                                                             bgcolor="transparent"
-                                                                            class="es-p10t es-p10b es-p5r es-p5l " style="padding-bottom: 30px; padding-top: 35px; "
+                                                                            class="es-p10t es-p10b es-p5r es-p5l "
+                                                                            style="padding-bottom: 30px; padding-top: 35px; "
                                                                             width="25.00%"><a href
                                                                                               style="color: #ffffff; font-size: 20px;"
                                                                                               target="_blank"><img
                                                                                 align="absmiddle"
-                                                                                alt class="es-p5b" height="27" src="https://tlr.stripocdn.email/content/guids/CABINET_3ef3c4a0538c293f4c84f503cd8af2cc/images/60961522067175378.png"
+                                                                                alt class="es-p5b" height="27"
+                                                                                src="https://tlr.stripocdn.email/content/guids/CABINET_3ef3c4a0538c293f4c84f503cd8af2cc/images/60961522067175378.png"
                                                                                 title><br></a></td>
                                                                         <td align="center"
                                                                             bgcolor="transparent"
-                                                                            class="es-p10t es-p10b es-p5r es-p5l " style="padding-bottom: 30px; padding-top: 35px; "
+                                                                            class="es-p10t es-p10b es-p5r es-p5l "
+                                                                            style="padding-bottom: 30px; padding-top: 35px; "
                                                                             width="25.00%"><a href
                                                                                               style="color: #ffffff; font-size: 20px;"
                                                                                               target="_blank"><img
                                                                                 align="absmiddle"
-                                                                                alt class="es-p5b" height="27" src="https://tlr.stripocdn.email/content/guids/CABINET_3ef3c4a0538c293f4c84f503cd8af2cc/images/72681522067183042.png"
+                                                                                alt class="es-p5b" height="27"
+                                                                                src="https://tlr.stripocdn.email/content/guids/CABINET_3ef3c4a0538c293f4c84f503cd8af2cc/images/72681522067183042.png"
                                                                                 title><br></a></td>
                                                                         <td align="center"
                                                                             bgcolor="transparent"
-                                                                            class="es-p10t es-p10b es-p5r es-p5l " style="padding-bottom: 30px; padding-top: 35px; "
+                                                                            class="es-p10t es-p10b es-p5r es-p5l "
+                                                                            style="padding-bottom: 30px; padding-top: 35px; "
                                                                             width="25.00%"><a href
                                                                                               style="color: #ffffff; font-size: 20px;"
                                                                                               target="_blank"><img
                                                                                 align="absmiddle"
-                                                                                alt class="es-p5b" height="27" src="https://tlr.stripocdn.email/content/guids/CABINET_3ef3c4a0538c293f4c84f503cd8af2cc/images/76121522068412489.jpg"
+                                                                                alt class="es-p5b" height="27"
+                                                                                src="https://tlr.stripocdn.email/content/guids/CABINET_3ef3c4a0538c293f4c84f503cd8af2cc/images/76121522068412489.jpg"
                                                                                 title><br></a></td>
                                                                         <td align="center"
                                                                             bgcolor="transparent"
-                                                                            class="es-p10t es-p10b es-p5r es-p5l " style="padding-bottom: 30px; padding-top: 35px; "
+                                                                            class="es-p10t es-p10b es-p5r es-p5l "
+                                                                            style="padding-bottom: 30px; padding-top: 35px; "
                                                                             width="25.00%"><a href
                                                                                               style="color: #ffffff; font-size: 20px;"
                                                                                               target="_blank"><img
                                                                                 align="absmiddle"
-                                                                                alt class="es-p5b" height="27" src="https://tlr.stripocdn.email/content/guids/CABINET_3ef3c4a0538c293f4c84f503cd8af2cc/images/12411522072775563.jpg"
+                                                                                alt class="es-p5b" height="27"
+                                                                                src="https://tlr.stripocdn.email/content/guids/CABINET_3ef3c4a0538c293f4c84f503cd8af2cc/images/12411522072775563.jpg"
                                                                                 title><br></a></td>
                                                                     </tr>
                                                                     </tbody>
