working template service

--- a/notification/src/main/resources/templates/EMAIL_CONFIRMATION.html
+++ b/notification/src/main/resources/templates/EMAIL_CONFIRMATION.html
@@ -71,12 +71,10 @@
                                 </table>
                             </td>
                         </tr>
-
                         <tr>
                             <td bgcolor="#FFFFFF" align="center">
                                 <table width="100%" align="center" cellpadding="0" cellspacing="0" border="0">
                                     <tbody>
-
                                     <tr>
                                         <td width="41" style="font-size:1px;line-height:1px">&nbsp;</td>
                                         <td height="36" style="font-size:1px;line-height:1px">&nbsp;</td>
@@ -87,11 +85,10 @@
                                         <td width="41" style="font-size:1px;line-height:1px">&nbsp;</td>
                                         <td style="font-family:'Proxima Nova',Calibri,Helvetica,sans-serif;font-size:16px;color:#505050;text-align:left;line-height:25.6px;font-weight:normal;text-transform:none">
                                             <p>
-
-
                                                 Please verify your email:<br>
                                                 <br>
-                                                <a href="#" style="
+                                                <a href="%s"
+                                                   style="
   font-size:16px;
   font-weight:700;
   padding:15px 40px;
@@ -112,13 +109,15 @@
   border-radius: 4px;
   -webkit-user-select: none;
   -moz-user-select: none;
-  -ms-user-select: none;">Please confirm your email</a>
+  -ms-user-select: none;"
+                                                >
+                                                    Пожалуйства, подтвердите почту</a>
                                                 <br>
                                                 <br>
-                                                If you need us for any reason, please reach out to <a href="mailto:studentplatform.no.reply@gmail.com">studentplatform.no.reply@gmail.com</a>.<br>
+                                                Если у вас по каким-то причинам возникли сложности, пожалуйста свяжитесь с нами <a href="mailto:studentplatform.no.reply@gmail.com">studentplatform.no.reply@gmail.com</a>.<br>
                                                 <br>
-                                                Sincerely,<br>
-                                                Your Students Pltafrom Team
+                                                Сердечно,<br>
+                                                Ваши "Students Pltafrom Team"
 
 
                                             </p>
