--- a/notification/src/main/resources/templates/EMAIL_CONFIRMATION.html
+++ b/notification/src/main/resources/templates/EMAIL_CONFIRMATION.html
@@ -85,7 +85,7 @@
                                         <td width="41" style="font-size:1px;line-height:1px">&nbsp;</td>
                                         <td style="font-family:'Proxima Nova',Calibri,Helvetica,sans-serif;font-size:16px;color:#505050;text-align:left;line-height:25.6px;font-weight:normal;text-transform:none">
                                             <p>
-                                                Please verify your email:<br>
+                                                Пожалуйства, подтвердите почту:<br>
                                                 <br>
                                                 <a href="%s"
                                                    style="
@@ -111,7 +111,7 @@
   -moz-user-select: none;
   -ms-user-select: none;"
                                                 >
-                                                    Пожалуйства, подтвердите почту</a>
+                                                    Поддтвердите email</a>
                                                 <br>
                                                 <br>
                                                 Если у вас по каким-то причинам возникли сложности, пожалуйста свяжитесь с нами <a href="mailto:studentplatform.no.reply@gmail.com">studentplatform.no.reply@gmail.com</a>.<br>
