doc + send multi notification

--- a/notification/src/main/resources/templates/mark_notification.html
+++ b/notification/src/main/resources/templates/mark_notification.html
@@ -105,12 +105,14 @@
                                                 </h3>
                                             </div>
                                             <br>
-                                            If you need us for any reason, please reach out to
+                                            Если у вас по каким-то причинам возникли сложности,
+                                            пожалуйста свяжитесь с нами
                                             <a href="mailto:studentplatform.no.reply@gmail.com">
-                                                studentplatform.no.reply@gmail.com</a>.<br>
+                                                studentplatform.no.reply@gmail.com</a>.
                                             <br>
-                                            Sincerely,<br>
-                                            Your Students Platfrom Team
+                                            <br>
+                                            Сердечно,<br>
+                                            Ваши "Students Pltafrom Team"
                                         </td>
                                         <td width="41" style="font-size:1px;line-height:1px">&nbsp;</td>
                                     </tr>
